Agent - fanuc iSeries/Distribution/30iHSSB/Fwlib32.h


typedef struct odbahis {
    unsigned short  s_no;   
    short   type;           
    unsigned short  e_no;   
    struct {
        short   dummy;
        short   alm_grp;        
        short   alm_no;         
        char    axis_no;        
        char    year;           
        char    month;          
        char    day;            
        char    hour;           
        char    minute;         
        char    second;         
        char    dummy2;
        short   len_msg;        
        char    alm_msg[32];    
    } alm_his[10];
} ODBAHIS;  
typedef struct iodbsig {
    short   datano; 
    short   type;   
    struct {
        short   ent_no;     
        short   sig_no;     
        char    sig_name;   
        char    mask_pat;   
    } data[20];
} IODBSIG;  
typedef struct odbsys {
    short   addinfo ;       
    short   max_axis ;      
    char    cnc_type[2] ;   
    char    mt_type[2] ;    
    char    series[4] ;     
    char    version[4] ;    
    char    axes[2] ;       
} ODBSYS ;
typedef struct odbsys {
    short   dummy ;         
    char    max_axis[2] ;   
    char    cnc_type[2] ;   
    char    mt_type[2] ;    
    char    series[4] ;     
    char    version[4] ;    
    char    axes[2] ;       
} ODBSYS ;
typedef struct odbst {
    short dummy[2];     
    short aut;          
    short manual;       
    short run;          
    short edit;         
    short motion;       
    short mstb;         
    short emergency;    
    short write;        
    short labelskip;    
    short alarm;        
    short warning;      
    short battery;      
} ODBST ;
typedef struct odbst {
    short   dummy[2] ;  
    short   aut ;       
    short   run ;       
    short   motion ;    
    short   mstb ;      
    short   emergency ; 
    short   alarm ;     
    short   edit ;      
} ODBST ;
typedef struct odbst {
    short   hdck ;      
    short   tmmode ;    
    short   aut ;       
    short   run ;       
    short   motion ;    
    short   mstb ;      
    short   emergency ; 
    short   alarm ;     
    short   edit ;      
} ODBST ;
typedef struct odbalm {
    short   dummy[2] ;  
    short   data ;      
} ODBALM ;
typedef struct alminfo {
#if MAX_AXIS > 16
    union {
        struct {
            struct {
                long    axis ;
                short   alm_no ;
            } alm[5] ;
            long    data_end ;
        } alm1 ;
        struct {
            struct {
                long    axis ;
                short   alm_no ;
                short   msg_len ;
                char    alm_msg[32] ;
            } alm[5] ;
            long    data_end ;
        }alm2 ;
    } u ;
#else
    union {
        struct {
            struct {
                short   axis ;
                short   alm_no ;
            } alm[5] ;
            short   data_end ;
        } alm1 ;
        struct {
            struct {
                short   axis ;
                short   alm_no ;
                short   msg_len ;
                char    alm_msg[32] ;
            } alm[5] ;
            short   data_end ;
        }alm2 ;
    } u ;
#endif
} ALMINFO ; 
typedef struct odbmdl {
    short   datano;
    short   type;
    union {
        char    g_data;
        char    g_rdata[12];
        char    g_1shot;
        struct {
            long    aux_data;
            char    flag1;
            char    flag2;
        }aux;
        struct {
            long    aux_data;
            char    flag1;
            char    flag2;
        }raux1[25];
    }modal;
} ODBMDL ;
typedef struct odbmdl {
    short   datano;
    short   type;
    union {
        char    g_data;
        char    g_rdata[35];
        char    g_1shot[4];
        struct {
            long    aux_data;
            char    flag1;
            char    flag2;
        }aux;
        struct {
            long    aux_data;
            char    flag1;
            char    flag2;
        }raux1[27];
        struct {
            long    aux_data;
            char    flag1;
            char    flag2;
        }raux2[MAX_AXIS];
    }modal;
} ODBMDL ;
typedef struct msg {
    short datano ;     
    short type ;       
    short char_num ;   
    char  data[129] ;  
} OPMSG ;               
typedef struct msg {
    short   datano ;    
    short   type ;      
    short   char_num ;  
    char    data[256] ; 
} OPMSG ;   
typedef struct opmsg3 {
    short   datano ;    
    short   type ;      
    short   char_num ;  
    char    data[256] ; 
} OPMSG3 ;   
typedef struct odberr {
    short   err_no ;
    short   err_dtno ;
} ODBERR ;
typedef struct odbdiagif {
    unsigned short  info_no ;
    short   prev_no ;
    short   next_no ;
    struct {
        short   diag_no ;
        short   diag_type ;
    } info[10] ;    
} ODBDIAGIF ;
typedef struct odbdiagnum {
    unsigned short  diag_min ;
    unsigned short  diag_max ;
    unsigned short  total_no ;
} ODBDIAGNUM ;
typedef struct iodbwave {
    short   condition ;
    char    trg_adr ;
    char    trg_bit ;
    short   trg_no ;
    short   delay ;
    short   t_range ;
    struct {
        short   kind ;
        union {
#if MAX_AXIS > 16
            long        axis ;
#else
            short       axis ;
#endif
            struct {
                char    adr ;
                char    bit ;
                short   no ;
            } io ;
        } u ;
    } ch[12] ;
} IODBWAVE ;
typedef struct odbwvdt {
    short   channel ;
    short   kind ;
    union {
        short   axis ;
        struct {
            char    adr ;
            char    bit ;
            short   no ;
        } io ;
    } u ;
    char    year ;
    char    month ;
    char    day ;
    char    hour ;
    char    minute ;
    char    second ;
    short   t_cycle ;
    short   data[8192] ;
} ODBWVDT ;
typedef struct odbsyss {
     char    slot_no_p[16];
     char    slot_no_l[16];
     short   module_id[16];
     short   soft_id[16];
     char    soft_series[16][5];
     char    soft_version[16][5];
     short   soft_inst;
     char    boot_ser[5];
     char    boot_ver[5];
     char    servo_ser[5];
     char    servo_ver[5];
     char    pmc_ser[5];
     char    pmc_ver[5];
     char    ladder_ser[5];
     char    ladder_ver[5];
     char    mcrlib_ser[5];
     char    mcrlib_ver[5];
     char    mcrapl_ser[5];
     char    mcrapl_ver[5];
     char    spl1_ser[5];
     char    spl1_ver[5];
     char    spl2_ser[5];
     char    spl2_ver[5];
     char    spl3_ser[5];
     char    spl3_ver[5];
     char    c_exelib_ser[5];
     char    c_exelib_ver[5];
     char    c_exeapl_ser[5];
     char    c_exeapl_ver[5];
     char    int_vga_ser[5];
     char    int_vga_ver[5];
     char    out_vga_ser[5];
     char    out_vga_ver[5];
     char    pmm_ser[5];
     char    pmm_ver[5];
     char    pmc_mng_ser[5];
     char    pmc_mng_ver[5];
     char    pmc_shin_ser[5];
     char    pmc_shin_ver[5];
     char    pmc_shout_ser[5];
     char    pmc_shout_ver[5];
     char    pmc_c_ser[5];
     char    pmc_c_ver[5];
     char    pmc_edit_ser[5];
     char    pmc_edit_ver[5];
     char    lddr_mng_ser[5];
     char    lddr_mng_ver[5];
     char    lddr_apl_ser[5];
     char    lddr_apl_ver[5];
     char    spl4_ser[5];
     char    spl4_ver[5];
     char    mcr2_ser[5];
     char    mcr2_ver[5];
     char    mcr3_ser[5];
     char    mcr3_ver[5];
     char    eth_boot_ser[5];
     char    eth_boot_ver[5];
     char    reserve[8][5];
} ODBSYSS ;
typedef struct odbsyss2 {
     char    slot_no_p[16];
     char    slot_no_l[16];
     short   module_id[16];
     short   soft_id[16];
     char    soft_series[16][5];
     char    soft_version[16][5];
     short   soft_inst;
     char    boot_ser[5];
     char    boot_ver[5];
     char    servo_ser[5];
     char    servo_ver[5];
     char    pmc_ser[5];
     char    pmc_ver[5];
     char    ladder_ser[5];
     char    ladder_ver[5];
     char    mcrlib_ser[5];
     char    mcrlib_ver[5];
     char    mcrapl_ser[5];
     char    mcrapl_ver[5];
     char    spl1_ser[5];
     char    spl1_ver[5];
     char    spl2_ser[5];
     char    spl2_ver[5];
     char    spl3_ser[5];
     char    spl3_ver[5];
     char    c_exelib_ser[5];
     char    c_exelib_ver[5];
     char    c_exeapl_ser[5];
     char    c_exeapl_ver[5];
     char    int_vga_ser[5];
     char    int_vga_ver[5];
     char    out_vga_ser[5];
     char    out_vga_ver[5];
     char    pmm_ser[5];
     char    pmm_ver[5];
     char    pmc_mng_ser[5];
     char    pmc_mng_ver[5];
     char    pmc_shin_ser[5];
     char    pmc_shin_ver[5];
     char    pmc_shout_ser[5];
     char    pmc_shout_ver[5];
     char    pmc_c_ser[5];
     char    pmc_c_ver[5];
     char    pmc_edit_ser[5];
     char    pmc_edit_ver[5];
     char    lddr_mng_ser[5];
     char    lddr_mng_ver[5];
     char    lddr_apl_ser[5];
     char    lddr_apl_ver[5];
     char    spl4_ser[5];
     char    spl4_ver[5];
     char    mcr2_ser[5];
     char    mcr2_ver[5];
     char    mcr3_ser[5];
     char    mcr3_ver[5];
     char    eth_boot_ser[5];
     char    eth_boot_ver[5];
     char    reserve[8][5];
     char    embEthe_ser[5];
     char    embEthe_ver[5];
     char    reserve2[38][5];
} ODBSYSS2 ;
typedef struct iodbtimer {
	short	type ;
	short	dummy ;
	union {
		struct {
			short	year ;
			short	month ;
			short	date ;
		} date ;
		struct {
			short	hour ;
			short	minute ;
			short	second ;
		} time ;
	} data ;
} IODBTIMER ;
typedef struct iodbpmc {
    short   type_a ;    
    short   type_d ;    
    short   datano_s ;  
    short   datano_e ;  
    union {
        char    cdata[5] ;  
        short   idata[5] ;
        long    ldata[5] ;
    } u ;
} IODBPMC ; 
typedef struct odbpmcinf {
    short   datano ;
    struct {
        char    pmc_adr ;
        char    adr_attr ;
        unsigned short  top_num ;
        unsigned short  last_num ;
    } info[64] ;
} ODBPMCINF ;
typedef struct iodbpmccntl {
    short   datano_s ;
    short   dummy ;
    short   datano_e ;
    struct {
        char    tbl_prm ;
        char    data_type ;
        unsigned short  data_size ;
        unsigned short  data_dsp ;
        short   dummy ;
    } info[100] ;
} IODBPMCCNTL ;
typedef struct  odbpmcalm {
    char    almmsg[128] ;    
} ODBPMCALM ;
typedef struct odbpmcerr {
    short   err_no ;
    short   err_dtno ;
} ODBPMCERR ;
typedef struct odbnode {
	long node_no;
	long io_base;
	long status;
	long cnc_type;
	char node_name[20];
} ODBNODE;
FWLIBAPI short WINAPI cnc_rdalmhistry( unsigned short, unsigned short, unsigned short, unsigned short, ODBAHIS * ) ;
FWLIBAPI short WINAPI cnc_clearophis( unsigned short, short ) ;
FWLIBAPI short WINAPI cnc_rdhissgnl( unsigned short, IODBSIG * ) ;
FWLIBAPI short WINAPI cnc_wrhissgnl( unsigned short, IODBSIG * ) ;
FWLIBAPI short WINAPI cnc_sysinfo( unsigned short, ODBSYS * ) ;
FWLIBAPI short WINAPI cnc_statinfo( unsigned short, ODBST * ) ;
FWLIBAPI short WINAPI cnc_alarm( unsigned short, ODBALM * ) ;
FWLIBAPI short WINAPI cnc_rdalminfo( unsigned short, short, short, short, ALMINFO * ) ;
FWLIBAPI short WINAPI cnc_modal( unsigned short, short, short, ODBMDL * ) ;
FWLIBAPI short WINAPI cnc_diagnosr( unsigned short, short *, short, short *, short *, void * ) ;
FWLIBAPI short WINAPI cnc_rdopmsg( unsigned short, short, short, OPMSG * ) ;
FWLIBAPI short WINAPI cnc_rdopmsg3( unsigned short, short, short *, OPMSG3 * ) ;
FWLIBAPI short WINAPI cnc_setpath( unsigned short, short ) ;
FWLIBAPI short WINAPI cnc_getpath( unsigned short, short *, short * ) ;
FWLIBAPI short WINAPI cnc_allclibhndl( unsigned short * ) ;
FWLIBAPI short WINAPI cnc_freelibhndl( unsigned short ) ;
FWLIBAPI short WINAPI cnc_getdtailerr( unsigned short, ODBERR * ) ;
FWLIBAPI short WINAPI cnc_rddiaginfo( unsigned short, short, unsigned short, ODBDIAGIF * ) ;
FWLIBAPI short WINAPI cnc_rddiagnum( unsigned short, ODBDIAGNUM * ) ;
FWLIBAPI short WINAPI cnc_getfigure( unsigned short, short, short *, short *, short * ) ;
FWLIBAPI short WINAPI cnc_rdloopgain( unsigned short, long * ) ;
FWLIBAPI short WINAPI cnc_rdcurrent( unsigned short, short * ) ;
FWLIBAPI short WINAPI cnc_rdcurrent( unsigned short, long * ) ;
FWLIBAPI short WINAPI cnc_rdsrvspeed( unsigned short, long * ) ;
FWLIBAPI short WINAPI cnc_rdfbusmem( unsigned short, short, short, long, long, void * ) ;
FWLIBAPI short WINAPI cnc_wrfbusmem( unsigned short, short, short, long, long, void * ) ;
FWLIBAPI short WINAPI cnc_rdwaveprm( unsigned short, IODBWAVE * ) ;
FWLIBAPI short WINAPI cnc_wrwaveprm( unsigned short, IODBWAVE * ) ;
FWLIBAPI short WINAPI cnc_wavestart( unsigned short ) ;
FWLIBAPI short WINAPI cnc_wavestop( unsigned short ) ;
FWLIBAPI short WINAPI cnc_wavestat( unsigned short, short * ) ;
FWLIBAPI short WINAPI cnc_rdwavedata( unsigned short, short, short, long, long *, ODBWVDT * ) ;
FWLIBAPI short WINAPI cnc_rdsyssoft( unsigned short, ODBSYSS * ) ;
FWLIBAPI short WINAPI cnc_rdsyssoft2( unsigned short, ODBSYSS2 * ) ;
FWLIBAPI short WINAPI cnc_rdmdlconfig2( unsigned short, char * ) ;
FWLIBAPI short WINAPI cnc_gettimer( unsigned short, IODBTIMER * ) ;
FWLIBAPI short WINAPI cnc_settimer( unsigned short, IODBTIMER * ) ;
FWLIBAPI short WINAPI cnc_getcncmodel( unsigned short, short * );
FWLIBAPI short WINAPI cnc_startdrawpos( unsigned short );
FWLIBAPI short WINAPI cnc_stopdrawpos( unsigned short );
FWLIBAPI short WINAPI cnc_startdyngrph( unsigned short );
FWLIBAPI short WINAPI cnc_stopdyngrph( unsigned short );
FWLIBAPI short WINAPI cnc_rdgrphcmd( unsigned short, short *, short * );
FWLIBAPI short WINAPI cnc_wrgrphcmdptr( unsigned short, short );
FWLIBAPI short WINAPI cnc_rdgrphcanflg( unsigned short, short * );
FWLIBAPI short WINAPI cnc_clrgrphcmd( unsigned short );
FWLIBAPI short WINAPI cnc_startnccmd( unsigned short );
FWLIBAPI short WINAPI cnc_startnccmd2( unsigned short, char * );
FWLIBAPI short WINAPI cnc_stopnccmd( unsigned short );
FWLIBAPI short WINAPI cnc_getdspmode( unsigned short, short * );
FWLIBAPI short WINAPI cnc_startrmtdgn( unsigned short );
FWLIBAPI short WINAPI cnc_stoprmtdgn( unsigned short );
FWLIBAPI short WINAPI cnc_rdrmtdgn( unsigned short, long *, char * );
FWLIBAPI short WINAPI cnc_wrrmtdgn( unsigned short, long *, char * );
FWLIBAPI short WINAPI cnc_wrcommstatus( unsigned short, short );
FWLIBAPI short WINAPI cnc_chkrmtdgn( unsigned short );
FWLIBAPI short WINAPI pmc_rdmsg( unsigned short, short *, short * ) ;
FWLIBAPI short WINAPI pmc_wrmsg( unsigned short, short, short * ) ;
FWLIBAPI short WINAPI pmc_crdmsg( unsigned short, short *, short * ) ;
FWLIBAPI short WINAPI pmc_cwrmsg( unsigned short, short, short * ) ;
FWLIBAPI short WINAPI pmc_rdpmcrng( unsigned short, short, short, unsigned short, unsigned short, unsigned short, IODBPMC * ) ;
FWLIBAPI short WINAPI pmc_rdpmcrng( unsigned short, short, short, short, short, short, IODBPMC *);
FWLIBAPI short WINAPI pmc_wrpmcrng( unsigned short, unsigned short, IODBPMC * ) ;
FWLIBAPI short WINAPI pmc_wrpmcrng( unsigned short, short, IODBPMC *);
FWLIBAPI short WINAPI pmc_rdkpm( unsigned short, unsigned long, char *, unsigned short ) ;
FWLIBAPI short WINAPI pmc_wrkpm( unsigned short, unsigned long, char *, unsigned short ) ;
FWLIBAPI short WINAPI pmc_kpmsiz( unsigned short, unsigned long * ) ;
FWLIBAPI short WINAPI pmc_rdpmcinfo( unsigned short, short, ODBPMCINF * ) ;
FWLIBAPI short WINAPI pmc_rdcntldata( unsigned short, short, short, short, IODBPMCCNTL * ) ;
FWLIBAPI short WINAPI pmc_wrcntldata( unsigned short, short, IODBPMCCNTL * ) ;
FWLIBAPI short WINAPI pmc_rdcntlgrp( unsigned short, short * ) ;
FWLIBAPI short WINAPI pmc_wrcntlgrp( unsigned short, short ) ;
FWLIBAPI short WINAPI pmc_rdalmmsg( unsigned short, short, short *, short *, ODBPMCALM * ) ;
FWLIBAPI short WINAPI pmc_getdtailerr( unsigned short, ODBPMCERR * ) ;
FWLIBAPI short WINAPI pmc_rdpmcmem( unsigned short, short, long, long, void * ) ;
FWLIBAPI short WINAPI pmc_wrpmcmem( unsigned short, short, long, long, void * ) ;
FWLIBAPI short WINAPI cnc_rdnodenum( long * );
FWLIBAPI short WINAPI cnc_rdnodeinfo( long, ODBNODE * );
FWLIBAPI short WINAPI cnc_setdefnode( long );
FWLIBAPI short WINAPI cnc_allclibhndl2( long, unsigned short * );